# snitch

./: .gitignore  list_binaries.py  rtl.txt  rtl_experimental.txt  rtl_small_both.txt  rtl_test_mini_both.txt  rtl_test_mini_ssr.txt  run_all.sh  run_rtl.sh  script_for_paul.sh  sitemap.xml
runtime/Classes/: index.html
runtime/Classes/structconv__layer__struct/: index.html
runtime/Classes/structgemm__layer__struct/: index.html
runtime/Classes/structgemm__result__t/: index.html
runtime/Classes/structident/: index.html
runtime/Classes/structkernel__fp32/: index.html
runtime/Classes/structkernel__fp64/: index.html
runtime/Classes/structomp__prof__t/: index.html
runtime/Classes/structomp__t/: index.html
runtime/Classes/structomp__team__t/: index.html
runtime/Classes/structperf__reg__t/: index.html
runtime/Classes/structsnrt__allocator/: index.html
runtime/Classes/structsnrt__allocator__inst/: index.html
runtime/Classes/structsnrt__barrier/: index.html
runtime/Classes/structsnrt__peripherals/: index.html
runtime/Classes/structsnrt__slice/: index.html
runtime/Classes/structsnrt__team/: index.html
runtime/Classes/structsnrt__team__root/: index.html
runtime/Classes/unionperf__reg32__t/: index.html
runtime/Examples/: index.html
runtime/Files/: index.html
runtime/Files/applications_2README_8md/: index.html
runtime/Files/batchnorm_8h/: index.html
runtime/Files/batchnorm__layer_8h/: index.html
runtime/Files/benchmark_8h/: index.html
runtime/Files/conv2d_8h/: index.html
runtime/Files/conv2d__layer_8h/: index.html
runtime/Files/data_8h/: index.html
runtime/Files/debug_8h/: index.html
runtime/Files/dir_1b87772ecb6338d255491e73d109d92a/: index.html
runtime/Files/dir_25389e8ccedb83043d280350ea057a45/: index.html
runtime/Files/dir_44cec6e3ea30e076b9313c4641539d9f/: index.html
runtime/Files/dir_5b32b0c8d196e0bee0bc7bd37f53bc55/: index.html
runtime/Files/dir_5f735e483190b1e987f01bac27340d4c/: index.html
runtime/Files/dir_63258e4bd604a30941441a5bf13ee1c7/: index.html
runtime/Files/dir_65d9ac0513258746857e829de6bdcde3/: index.html
runtime/Files/dir_687df1e3e4d8e7c59c4585f2d14d078b/: index.html
runtime/Files/dir_a04768fb9c5f69508e8162509da4a728/: index.html
runtime/Files/dir_a43e155b6864a88b68593d32d6762148/: index.html
runtime/Files/dir_a6e4fee11f07c3b70486e88fe92cbbdc/: index.html
runtime/Files/dir_b48e99e00c13f140bbfb4c281bca5194/: index.html
runtime/Files/dir_c678f1d94fcadf23f088beb06c159bb6/: index.html
runtime/Files/dir_c9be9173870f327345d33414c30b89d4/: index.html
runtime/Files/dir_d11ce512391593108fa9a153ee74f81a/: index.html
runtime/Files/dir_d8614481a845e6b5182a8bafa4362c3a/: index.html
runtime/Files/dir_dc58b1af80798a6a36e5f5ae77c7a4ef/: index.html
runtime/Files/dir_e8f13bae39bfe8cd0afeb13d1c0e76c2/: index.html
runtime/Files/dm_8h/: index.html
runtime/Files/encoding_8h/: index.html
runtime/Files/eu_8h/: index.html
runtime/Files/gemm_8h/: index.html
runtime/Files/interface_8h/: index.html
runtime/Files/kmp_8h/: index.html
runtime/Files/layer_8h/: index.html
runtime/Files/lto__a_8h/: index.html
runtime/Files/matmul_8h/: index.html
runtime/Files/maxpool_8h/: index.html
runtime/Files/omp_8h/: index.html
runtime/Modules/: index.html
runtime/Namespaces/: index.html
runtime/Pages/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-atomic_adapter_narrow/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-atomic_adapter_narrow_wide/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_conv_to_spm_narrow/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_conv_to_spm_narrow_pre/: index.html
search/: search_index.json
sw/SSRInference/: CMakeLists.txt  CMakeLists_old.txt  matmult.py
sw/SSRInference/include/: conflict.h  matmul.h  reverse_conflict.h  scalarprod.h  summat.h  various.h
sw/SSRInference/src/: conflict.c  matmul.c  reverse_conflict.c  scalarprod.c  summat.c  various.c
sw/SSRInference/tests/: 2mm.c  2mm_ssrfriendly.c  3mm.c  3mm_ssrfriendly.c  bench_matmul.c  bench_sp.c  bench_sp_unroll.c  gemm.c  test.c  test_access.c  test_aliasing.c  test_conflict.c  test_mat.c  test_reverse_conflict.c  test_size.c  test_sp.c  test_various.c
sw/SSRInference/traces/: bench-matmul_trace.dasm  bench-matmul_trace.s  bench-matmul_trace_ann.s  sp_trace.txt  test-access_trace.dasm  test-access_trace.s  test-innerloop-expand_trace.dasm  test-innerloop-expand_trace.txt  test-various-ann.s  test-various.dasm  test-various.s  trace_sp.dasm
sw/cmake/: toolchain-llvm.cmake
ug/occamy_addrmap/: index.html
(+191 files in other folders)
